# cpp_api_design

./: .gitignore
callback/: main.cpp  module_a.cpp  module_a.h  module_b.cpp  module_b.h
constructor_override/: main.cpp  main.h
constructors/: CMakeLists.txt
constructors/include/: class_a.hh
constructors/src/: main.cc
hiding/: main.cpp
join_scenario/: CMakeLists.txt
join_scenario/include/: thread_guard.h
join_scenario/src/: main.cpp  thread_guard.cpp
multithread/: CMakeLists.txt
multithread/src/: main.cpp
my_object_and_holder/: main.cpp  my_object.cpp  my_object.h  my_object_holder.cpp  my_object_holder.h
non_copiable/: main.cpp  module_A.cpp  module_A.h
observer/: CMakeLists.txt
observer/include/: observer.h  observer_interface.h  subject.h  subject_interface.h
observer/src/: main.cpp  subject.cpp
private_functions_test/: CMakeLists.txt
private_functions_test/my_project/: CMakeLists.txt
private_functions_test/my_project/include/private/my_project/: Bar.h
private_functions_test/my_project/include/public/my_project/: Foo.h
private_functions_test/my_project/src/: Bar.cpp  Foo.cpp
private_functions_test/test/: CMakeLists.txt
private_functions_test/test/src/: MyTest.cpp
protected_pointer/: foo.cpp  foo.h  main.cpp
singleton/: main.cpp  monostate.cpp  monostate.h  singleton.cpp  singleton.h
template_api/: CMakeLists.txt
template_api/include/: stack.hh
template_api/src/: main.cc  stack.cc
test/: main.cpp
